--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,7 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-.idea/*
-
-.idea/workspace.xml
-.idea/jsLibraryMappings.xml
-.idea/misc.xml
-.idea/modules.xml
+.idea/
 
 uploads
 
