--- a/.env.example
+++ b/.env.example
@@ -29,10 +29,11 @@ PM_CLIENT_ID=testLar
 PM_CLIENT_SECRET=mySecret
 PM_WORK_SPACE=workflow
 PM_API_VERSION=1.0
-PM_API_VERSION=1.0
 PM_ADMIN=
 PM_PASS=
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=
+
+TIME_ZONE=+1
