--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=development
 PORT=9003
 APP_URL=http://85.25.103.81
 APP_WEB_URL=http://85.25.103.81/mrworking-web/public
+CRM_URL=
 
 DB_HOST=localhost
 DB_USER=root
