--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^2.3.2",
     "commander": "^2.19.0",
     "cors": "^2.8.3",
+    "datatables.net-editor-server": "^1.8.1",
     "dotenv": "^6.1.0",
     "email-templates": "^5.0.2",
     "exceljs": "^1.6.2",
