--- a/config.json
+++ b/config.json
@@ -14,9 +14,13 @@
         "path": "/attachments/notes",
         "use_parent": true
       },
-      "work_orders":{
-        "path":"/attachments/work_orders",
-	"use_parent":true
+      "work_orders": {
+        "path": "/attachments/work_orders",
+        "use_parent": true
+      },
+      "disconnection_billings": {
+        "path": "/attachments/work_orders",
+        "use_parent": true
       }
     },
     "persistence": {
