--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "method-override": "^2.3.9",
     "moment": "^2.21.0",
     "multer": "^1.4.1",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.8",
