--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,35 @@ build:
   script:
     - npm install
 
+before_script:
+  - apt-get update -yqq
+  - 'which ssh-agent || (apt-get install openssh-client -y )'
+  - eval $(ssh-agent -s)
+  - ssh-add < (echo "$SSH_PRIVATE_KEY")
+
 test:
   stage: test
   script:
     - "npm test test/material_requisition.service.test.js"
+
+#Deploy to Test
+deploy_staging:
+  stage:  deploy
+  script:
+    - ssh -v paul@85.25.103.81 -p 942 -t 'cd /var/www/html/mrworking-api && git pull origin dev && npm install && pm2 restart mrworking-api --log-date-format="YYYY-MM-DD HH:mm Z"'
+  environment:
+    name: staging
+    url: http://85.25.103.81/mrworking-web/public/login
+  only:
+    - dev
+
+# Deploy to production when merged
+deploy_production:
+  stage: deploy
+  environment:
+    name: production
+    url : http://62.138.8.136/iforce/public/login
+  only:
+    - production
+  script:
+    - echo 'deployed to production'
