--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "validatorjs": "^3.15.1"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "mock-knex": "^0.4.3",
+    "redis-mock": "^0.42.0"
   }
 }
