--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ before_script:
   - 'which ssh-agent || (apt-get install openssh-client -y )'
   - eval $(ssh-agent -s)
   - echo "$SSH_PRIVATE_KEY" > private_ssh.key
-  - chmod 600 private.ssh_key
+  - chmod 600 private_ssh.key
   - ssh-add private_ssh.key
 
 test:
