--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ test:
 deploy_staging:
   stage:  deploy
   script:
-    - ssh -v paul@85.25.103.81 -p 942 -t 'cd /var/www/html/mrworking-api && git pull origin dev && npm install && pm2 restart mrworking-api --log-date-format="YYYY-MM-DD HH:mm Z"'
+    - ssh -v paul@85.25.103.81 -p 942 -t 'cd /var/www/html/mrworking-api'
   environment:
     name: staging
     url: http://85.25.103.81/mrworking-web/public/login
