--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,7 @@ build:
 
 before_script:
   - apt-get update -yqq
-  - 'which ssh-agent || (apt-get install openssh-client -y )'
-  - eval $(ssh-agent -s)
-  - echo "$SSH_PRIVATE_KEY" > private_ssh.key
-  - chmod 600 private_ssh.key
-  - ssh-add private_ssh.key
+  - 'which ssh-agent || (apt-get install openssh-client -y)'
 
 test:
   stage: test
@@ -33,7 +29,12 @@ test:
 deploy_staging:
   stage:  deploy
   script:
-    - ssh -v paul@85.25.103.81 -p 942 -t 'cd /var/www/html/mrworking-api'
+  - eval $(ssh-agent -s)
+  - echo "$SSH_PRIVATE_KEY" > private_ssh.key
+  - chmod 600 private_ssh.key
+  - cat private.ssh_key
+  - ssh-add private_ssh.key
+  - ssh -v paul@85.25.103.81 -p 942 -t 'cd /var/www/html/mrworking-api'
   environment:
     name: staging
     url: http://85.25.103.81/mrworking-web/public/login
