--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
 build:
   stage: build
   script:
-  - sudo apt-get install npm
+  - apt-get install npm
   - npm install
 
 before_script:
