--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "email-templates": "^5.0.4",
     "exceljs": "^1.6.2",
     "express": "^4.16.4",
+    "imports-loader": "^0.8.0",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.2.0",
     "knex": "^0.15.2",
