--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,22 +8,11 @@ services:
     - "6379:6379"
     volumes:
     - "/opt/docker/redis_data:/data"
-    deploy:
-      placement:
-        constraints: [node.role == manager]
     command: redis-server --appendonly yes
 
   ## MySql Service Configuration
   db:
     image: mysql:8.0.15
-    deploy:
-      replicas: 2
-      resources:
-        limits:
-          cpus: "0.1"
-          memory: 50M
-      restart_policy:
-        condition: on-failure
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASS} #export to the value to shell
@@ -40,27 +29,16 @@ services:
     - "/opt/docker/process_maker/shared:/opt/pm/processmaker/shared"
     ports:
     - "8080:80"
-    links:
-    - db:mysql
+    depends_on:
+      - db
 
   ## Application service configuration
   api:
-    image: mrworking-api:dev
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: "0.1"
-          memory: 100M
-      restart_policy:
-        condition: on-failure
+    image: paulex10/mrworking-api:latest
     depends_on:
     - redis
     - db
     - process_maker
-    links:
-    - redis:redis
-    - db:db
     ports:
     - "9003:9003"
     env_file:
