--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM=iforce@ttttt.com
 
 
+IBM_APIC_BASE_URL=
+IBM_APIC_KEY=
+
+
 PM_BASE_URL=http://mypm.com
 PM_CLIENT_ID=testLar
 PM_CLIENT_SECRET=mySecret
